--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-spring": "^9.0.0-rc.3",
+    "react-use-gesture": "^9.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
